[gd_scene load_steps=4 format=3 uid="uid://bjokr004bgxk7"]

[ext_resource type="Script" uid="uid://ctnab0bvhg324" path="res://systems/obstacles/pipe_pair.gd" id="1_xcd68"]
[ext_resource type="PackedScene" uid="uid://bd7betshdvyri" path="res://systems/obstacles/pipe.tscn" id="3_g165u"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_28158"]
normal = Vector2(-1, 0)

[node name="PipePair" type="Node2D"]
scale = Vector2(0.998197, 1)
script = ExtResource("1_xcd68")
metadata/_edit_group_ = true

[node name="PipeTop" parent="." instance=ExtResource("3_g165u")]
scale = Vector2(1, -1)

[node name="PipeBottom" parent="." instance=ExtResource("3_g165u")]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(-26, -320, 52, 640)

[node name="Score" type="Area2D" parent="." groups=["score"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Score"]
shape = SubResource("WorldBoundaryShape2D_28158")
